--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
          <br>
          <h2>Sistemas com as</h2>
          <h2>funcionalidades que</h2>
-         <h2>evoluem seus negócios</h2>
+         <h2>evoluem seu negócio</h2>
          <button type="button" class="btn btn buton1" style="background-color: #37af96;">Evolua já!</button>
         </div>
         </div>
