--- a/home2.html
+++ b/home2.html
@@ -55,7 +55,7 @@
            <br>
            <h2>Sistemas com as</h2>
            <h2>funcionalidades que</h2>
-           <h2>evoluem seus negócios</h2>
+           <h2>evoluem seu negócio</h2>
            <button type="button" class="btn btn buton1" style="background-color: #2b7d6c;">Fale conosco</button>
 
            <div class="socials">
