--- a/contact1.html
+++ b/contact1.html
@@ -16,17 +16,17 @@
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #004138;">
     <div class="container-fluid">
       <div class="nav_content">
-      <a class="navbar-brand font_title_navbar" href="#">Openlab</a>
+      <a class="navbar-brand font_title_navbar" href="index.html">Openlab</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item margin_item">
-            <a class="nav-link active" aria-current="page" href="#">Produtos</a>
+            <a class="nav-link active" aria-current="page" href="products.html">Produtos</a>
           </li>
           <li class="nav-item margin_item">
-            <a class="nav-link active" aria-current="page" href="#">Projetos</a>
+            <a class="nav-link active" aria-current="page" href="contact1.html">Projetos</a>
           </li>
         </ul>
         <a href="" class="svg_a1 navbar-brand">
@@ -73,7 +73,7 @@
             </div>
           </div>
 
-          <button type="submit" class="btn btn botao3">Next</button>
+          <button type="submit" class="btn btn botao3"> <a href="contact2.html">Next</a> </button>
 
         </div>
    
