--- a/products.html
+++ b/products.html
@@ -16,17 +16,17 @@
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #004138;">
     <div class="container-fluid">
       <div class="nav_content">
-      <a class="navbar-brand font_title_navbar" href="#">Openlab</a>
+      <a class="navbar-brand font_title_navbar" href="index.html">Openlab</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item margin_item">
-            <a class="nav-link active" aria-current="page" href="#">Produtos</a>
+            <a class="nav-link active" aria-current="page" href="products.html">Produtos</a>
           </li>
           <li class="nav-item margin_item">
-            <a class="nav-link active" aria-current="page" href="#">Projetos</a>
+            <a class="nav-link active" aria-current="page" href="contact1.html">Projetos</a>
           </li>
         </ul>
         <a href="" class="svg_a1 navbar-brand">
@@ -53,7 +53,7 @@
             <div class="card_body">
                 <h2 style="font-weight: bolder; font-size: 2.5rem;">Landing Page</h2>
               <p class="card-text">Site Informativo</p>
-              <a href="#" class="btn btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
+              <a href="contact1.html" class="btn btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
             </div>
           </div>
           <div class="card">
@@ -61,7 +61,7 @@
             <div class="card_body">
                 <h2 style="font-weight: bolder; font-size: 2.5rem;">CRUD Page</h2>
               <p class="card-text">Site com Servidor</p>
-              <a href="#" class="btn btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
+              <a href="contact1.html" class="btn btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
             </div>
           </div>
           <div class="card" >
@@ -69,7 +69,7 @@
             <div class="card_body">
                 <h2 style="font-weight: bolder; font-size: 2.5rem;">FullStack Page</h2>
               <p class="card-text">Site Completo</p>
-              <a href="#" class="btn btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
+              <a href="contact1.html" class="btn btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
             </div>
           </div>
     </div>
