--- a/index.html
+++ b/index.html
@@ -45,24 +45,37 @@
     </div>
   </nav>
   
-  <section>
+   <!-- <section>
 
     <div class="main_content">
         <div class="img_content">
         </div>
 
         <div class="text_content">
-          <div class="text_context1">
          <h1>OPENLAB</h1>
          <br>
          <h2>Sistemas com as</h2>
          <h2>funcionalidades que</h2>
          <h2>evoluem seu negócio</h2>
          <button type="button" class="btn btn buton1" style="background-color: #37af96;"> <a href="products.html">Evolua já!</a></button>
-        </div>
-        </div>
+        </div> 
 
-  </section>
+  </section>  -->
+
+    <div class=" container-fluid main_content">
+      <div class="row">
+        <div class="col img_content">
+        </div>
+        <div class="col text_content">
+        <h1>OPENLAB</h1>
+         <br>
+         <h2>Sistemas com as</h2>
+         <h2>funcionalidades que</h2>
+         <h2>evoluem seu negócio</h2>
+         <button type="button" class="btn btn buton1" style="background-color: #37af96;"> <a href="products.html">Evolua já!</a></button>
+        </div>
+      </div>
+    </div> 
 
 </body>
 </html>
