--- a/contact2.html
+++ b/contact2.html
@@ -45,7 +45,7 @@
     </div>
   </nav>
   
-  <section>
+  <section class="container-fluid">
     <form  class="forms1">
         <div class="content_form1">
 
