--- a/home2.html
+++ b/home2.html
@@ -16,7 +16,7 @@
   
   <section>
 
-    <div class="main_content2">
+    <div class="container-fluid main_content2">
 
         <div class="text_content2">
            <h1>OPENLAB</h1>
