--- a/products.html
+++ b/products.html
@@ -45,36 +45,35 @@
     </div>
   </nav>
   
-  <section>
 
-    <div class="cards_products">
+    <div class="container-fuid cards_products">
         <div class="card" >
             <img src="img/laptop.png" class="card-img-top" alt="..." style="margin-top: 10%;">
-            <div class="card_body">
+            <div class="card-body">
                 <h2 style="font-weight: bolder; font-size: 2.5rem;">Landing Page</h2>
               <p class="card-text">Site Informativo</p>
-              <a href="contact1.html" class="btn btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
+              <a href="contact1.html" class="btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
             </div>
           </div>
           <div class="card">
             <img src="img/server.png" class="card-img-top" alt="..." style="margin-top: 10%;">
-            <div class="card_body">
+            <div class="card-body">
                 <h2 style="font-weight: bolder; font-size: 2.5rem;">CRUD Page</h2>
               <p class="card-text">Site com Servidor</p>
-              <a href="contact1.html" class="btn btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
+              <a href="contact1.html" class="btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
             </div>
           </div>
-          <div class="card" >
+          <div class="card">
             <img src="img/pc.png" class="card-img-top" alt="..." style="margin-top: 10%;">
-            <div class="card_body">
+            <div class="card-body">
                 <h2 style="font-weight: bolder; font-size: 2.5rem;">FullStack Page</h2>
               <p class="card-text">Site Completo</p>
-              <a href="contact1.html" class="btn btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
+              <a href="contact1.html" class="btn botao2" style="background-color: #37af96; color: #fafafa;">Faça seu orçamento aqui!</a>
             </div>
           </div>
     </div>
 
-  </section>
+
 
 </body>
 </html>
