--- a/contact1.html
+++ b/contact1.html
@@ -45,7 +45,7 @@
     </div>
   </nav>
   
-  <section>
+  <div class="container-fluid form-content">
     <form  class="forms1">
         <div class="content_form1">
 
@@ -78,7 +78,7 @@
         </div>
    
       </form>
-  </section>
+  </div>
 
 </body>
 </html>
