--- a/contact2.html
+++ b/contact2.html
@@ -16,19 +16,17 @@
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #004138;">
     <div class="container-fluid">
       <div class="nav_content">
-      <a class="navbar-brand font_title_navbar" href="index.html">Openlab</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item margin_item">
-            <a class="nav-link active" aria-current="page" href="products.html">Produtos</a>
-          </li>
-          <li class="nav-item margin_item">
-            <a class="nav-link active" aria-current="page" href="contact1.html">Projetos</a>
-          </li>
-        </ul>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="nav_a_content">
+        <a class="navbar-brand font_title_navbar" href="index.html">Openlab</a>
+            <a class="navbar-brand " aria-current="page" href="products.html">Produtos</a>
+            <a class="navbar-brand " aria-current="page" href="contact1.html">Projetos</a>
+          </div>
+    
+        <div class="d-flex">
         <a href="" class="svg_a1 navbar-brand">
           <svg class="svg_sacola" xmlns="http://www.w3.org/2000/svg" fill="#fff" class="bi bi-bag-fill" viewBox="0 0 16 16">
             <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5z"/>
@@ -39,13 +37,14 @@
             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
           </svg>
         </a>
+      </div>
     
       </div>
       </div>
     </div>
   </nav>
   
-  <section class="container-fluid">
+  <div class="container-fluid">
     <form  class="forms1">
         <div class="content_form1">
 
@@ -75,7 +74,7 @@
         </div>
    
       </form>
-  </section>
+  </div>
 
 </body>
 </html>
