--- a/contact2.html
+++ b/contact2.html
@@ -66,9 +66,9 @@
             </div>
           </div>
 
-          <div class="botao_duplo">
-          <button type="submit" class="btn btn botao3"> <a href="contact1.html">Back</a> </button>
-          <button type="submit" class="btn btn botao3">Next</button>
+          <div class="botao_duplo2">
+          <button type="submit" class="btn btn botao4"> <a href="contact1.html">Back</a> </button>
+          <button type="submit" class="btn btn botao4">Next</button>
         </div>
 
         </div>
